--- a/src/patternfly/base/tokens/palette-dark.scss
+++ b/src/patternfly/base/tokens/palette-dark.scss
@@ -40,6 +40,10 @@
   --pf--global--icon--color--200: var(--pf--global--color--gray--400);
   --pf--global--icon--color--300: var(--pf--global--color--gray--900);
 
+  // border color
+  --pf--global--border--color--100: var(--pf--global--color--gray--600);
+  --pf--global--border--color--200: var(--pf--global--color--gray--500);
+
   // blend modes 
   --pf--global--mix-blend-mode--100: screen;
 
