--- a/src/patternfly/demos/Table/table-simple-table.hbs
+++ b/src/patternfly/demos/Table/table-simple-table.hbs
@@ -51,7 +51,9 @@
         <a href="#">Action link</a>
       {{/table-td}}
       {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id "-dropdown-kebab-1") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{#> button button--modifier="pf-m-plain" button--attribute='aria-label="Remove"'}}
+          <i class="fas fa-ellipsis-h" aria-hidden="true"></i>
+        {{/button}}
       {{/table-td}}
     {{/table-tr}}
 
@@ -83,7 +85,9 @@
         <a href="#">Action link</a>
       {{/table-td}}
       {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id "-dropdown-kebab-2") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{#> button button--modifier="pf-m-plain" button--attribute='aria-label="Remove"'}}
+          <i class="fas fa-ellipsis-h" aria-hidden="true"></i>
+        {{/button}}
       {{/table-td}}
     {{/table-tr}}
 
@@ -115,7 +119,9 @@
         <a href="#">Action link</a>
       {{/table-td}}
       {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id "-dropdown-kebab-3") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{#> button button--modifier="pf-m-plain" button--attribute='aria-label="Remove"'}}
+          <i class="fas fa-ellipsis-h" aria-hidden="true"></i>
+        {{/button}}
       {{/table-td}}
     {{/table-tr}}
 
@@ -147,7 +153,9 @@
         <a href="#">Action link</a>
       {{/table-td}}
       {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id "-dropdown-kebab-4") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{#> button button--modifier="pf-m-plain" button--attribute='aria-label="Remove"'}}
+          <i class="fas fa-ellipsis-h" aria-hidden="true"></i>
+        {{/button}}
       {{/table-td}}
     {{/table-tr}}
 
@@ -179,7 +187,9 @@
         <a href="#">Action link</a>
       {{/table-td}}
       {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id "-dropdown-kebab-5") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
+        {{#> button button--modifier="pf-m-plain" button--attribute='aria-label="Remove"'}}
+          <i class="fas fa-ellipsis-h" aria-hidden="true"></i>
+        {{/button}}
       {{/table-td}}
     {{/table-tr}}
   {{/table-tbody}}
