--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -5,7 +5,6 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 :root {
   --#{$page}--BackgroundColor: var(--pf--global--background--color--secondary);
   --#{$page}--inset: var(--pf--global--spacer--md);
-  --#{$page}--xl--inset: var(--pf--global--spacer--xl);
 
   // Header
   --#{$page}__header--BackgroundColor: var(--pf--global--background--color--secondary);
@@ -16,11 +15,6 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__header-brand--PaddingLeft: var(--pf--global--spacer--md);
   --#{$page}__header-brand--xl--PaddingRight: var(--pf--global--spacer--xl);
   --#{$page}__header-brand--xl--PaddingLeft: var(--pf--global--spacer--xl);
-
-  @media (min-width: $pf-v5-global--breakpoint--xl) {
-    --#{$page}__header-brand--PaddingLeft: var(--#{$page}__header-brand--xl--PaddingLeft);
-    --#{$page}--inset: var(--#{$page}--xl--inset);
-  }
 
   // Toggle
   --#{$page}__header-sidebar-toggle__c-button--PaddingTop: var(--pf--global--spacer--sm);
@@ -85,6 +79,17 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__sidebar--TranslateZ: 0;
   --#{$page}__sidebar--m-expanded--TranslateX: 0;
   --#{$page}__sidebar--xl--TranslateX: 0;
+  --#{$page}__sidebar--MarginRight: var(--pf--global--spacer--lg);
+
+  // Sidebar header
+  --#{$page}__sidebar-header--BorderBottomWidth: var(--pf--global--border--width--divider);
+  --#{$page}__sidebar-header--BorderBottomColor: var(--pf--global--border--color);
+  --#{$page}__sidebar-header--PaddingTop: var(--pf--global--spacer--sm);
+  --#{$page}__sidebar-header--PaddingBottom: var(--pf--global--spacer--md);
+  --#{$page}__sidebar-title--FontSize: var(--pf--global--font--size--heading--md);
+  --#{$page}__sidebar-title--LineHeight: var(--pf--global--font--line-height--heading);
+  --#{$page}__sidebar-title--FontFamily: var(--pf--global--font--family--heading);
+  --#{$page}__sidebar-title--FontWeight: var(--pf--global--font--weight--heading--bold);
 
   // Sidebar body
   --#{$page}__sidebar-body--PaddingRight: 0;
@@ -104,14 +109,10 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
   // Main section
   --#{$page}__main-section--MarginTop: var(--pf--global--spacer--md);
-  --#{$page}__main-section--PaddingTop: var(--pf--global--spacer--md);
-  --#{$page}__main-section--PaddingRight: var(--pf--global--spacer--md);
-  --#{$page}__main-section--PaddingBottom: var(--pf--global--spacer--md);
-  --#{$page}__main-section--PaddingLeft: var(--pf--global--spacer--md);
-  --#{$page}__main-section--xl--PaddingTop: var(--pf--global--spacer--xl);
-  --#{$page}__main-section--xl--PaddingRight: var(--pf--global--spacer--xl);
-  --#{$page}__main-section--xl--PaddingBottom: var(--pf--global--spacer--xl);
-  --#{$page}__main-section--xl--PaddingLeft: var(--pf--global--spacer--xl);
+  --#{$page}__main-section--PaddingTop: var(--pf--global--spacer--lg);
+  --#{$page}__main-section--PaddingRight: var(--pf--global--spacer--lg);
+  --#{$page}__main-section--PaddingBottom: 0;
+  --#{$page}__main-section--PaddingLeft: var(--pf--global--spacer--lg);
   --#{$page}__main-breadcrumb--main-section--PaddingTop: var(--pf--global--spacer--md);
   --#{$page}__main-section--BackgroundColor: transparent; 
   --#{$page}__main-section--m-light--BackgroundColor: transparent; 
@@ -136,13 +137,6 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}--section--m-shadow-top--BoxShadow: var(--#{$pf-global}--BoxShadow--sm-top);
   --#{$page}--section--m-shadow-top--ZIndex: var(--#{$pf-global}--ZIndex--xs);
 
-  @media screen and (min-width: $pf-v5-global--breakpoint--xl) {
-    --#{$page}__main-section--PaddingTop: var(--#{$page}__main-section--xl--PaddingTop);
-    --#{$page}__main-section--PaddingRight: var(--#{$page}__main-section--xl--PaddingRight);
-    --#{$page}__main-section--PaddingBottom: var(--#{$page}__main-section--xl--PaddingBottom);
-    --#{$page}__main-section--PaddingLeft: var(--#{$page}__main-section--xl--PaddingLeft);
-  }
-
   // Main section horizontal nav
   --#{$page}__main-nav--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
   --#{$page}__main-nav--PaddingTop: var(--#{$pf-global}--spacer--md);
@@ -151,11 +145,6 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__main-nav--m-sticky-top--PaddingBottom: var(--#{$pf-global}--spacer--md);
   --#{$page}__main-nav--xl--PaddingRight: var(--#{$pf-global}--spacer--sm);
   --#{$page}__main-nav--xl--PaddingLeft: var(--#{$pf-global}--spacer--sm);
-
-  @media screen and (min-width: $pf-v5-global--breakpoint--xl) {
-    --#{$page}__main-nav--PaddingRight: var(--#{$page}__main-nav--xl--PaddingRight);
-    --#{$page}__main-nav--PaddingLeft: var(--#{$page}__main-nav--xl--PaddingLeft);
-  }
 
   // Main section horizontal subnav
   --#{$page}__main-subnav--BackgroundColor: var(--#{$pf-global}--BackgroundColor--dark-300);
@@ -166,36 +155,23 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__sidebar--main__main-subnav--BorderLeftWidth: var(--#{$pf-global}--BorderWidth--sm);
   --#{$page}__sidebar--m-collapsed--main__main-subnav--BorderLeftWidth: 0;
 
-
   // Main section breadcrumb
-  --#{$page}__main-breadcrumb--BackgroundColor: var(--pf--global--background--color--primary);
-  --#{$page}__main-breadcrumb--PaddingTop: var(--pf--global--spacer--md);
-  --#{$page}__main-breadcrumb--PaddingRight: var(--pf--global--spacer--md);
+  --#{$page}__main-breadcrumb--PaddingTop: var(--pf--global--spacer--lg);
+  --#{$page}__main-breadcrumb--PaddingRight: var(--pf--global--spacer--lg);
   --#{$page}__main-breadcrumb--PaddingBottom: 0;
-  --#{$page}__main-breadcrumb--PaddingLeft: var(--pf--global--spacer--md);
-  --#{$page}__main-breadcrumb--m-sticky-top--PaddingBottom: var(--pf--global--spacer--md);
-  --#{$page}__main-breadcrumb--xl--PaddingRight: var(--pf--global--spacer--lg);
-  --#{$page}__main-breadcrumb--xl--PaddingLeft: var(--pf--global--spacer--lg);
+  --#{$page}__main-breadcrumb--PaddingLeft: var(--pf--global--spacer--lg);
 
   // Main section tabs
   --#{$page}__main-tabs--PaddingTop: 0;
   --#{$page}__main-tabs--PaddingRight: 0;
   --#{$page}__main-tabs--PaddingBottom: 0;
   --#{$page}__main-tabs--PaddingLeft: 0;
-  --#{$page}__main-tabs--BackgroundColor: var(--pf--global--background--color--primary);
-
-  @media screen and (min-width: $pf-v5-global--breakpoint--xl) {
-    --#{$page}__main-breadcrumb--PaddingRight: var(--#{$page}__main-breadcrumb--xl--PaddingRight);
-    --#{$page}__main-breadcrumb--PaddingLeft: var(--#{$page}__main-breadcrumb--xl--PaddingLeft);
-  }
 
   // Wizard main section
   --#{$page}__main-wizard--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
   --#{$page}__main-wizard--BorderTopColor: var(--#{$pf-global}--BorderColor--100);
   --#{$page}__main-wizard--BorderTopWidth: var(--#{$pf-global}--BorderWidth--sm);
   --#{$page}__main-wizard--m-light-200--BackgroundColor: var(--#{$pf-global}--BackgroundColor--200);
-
-  // URL.com/guidelines#layout
 }
 
 .#{$page} {
@@ -222,6 +198,7 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 // Header
 .#{$page}__header,
 .#{$page} > .#{$masthead} {
+  --#{$masthead}--m-display-inline--GridTemplateColumns: var(--#{$page}__sidebar--Width) 1fr;
   z-index: var(--#{$page}__header--ZIndex);
   grid-area: header;
 }
@@ -387,8 +364,6 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
 // Sidebar
 .#{$page}__sidebar {
-  @include pf-v5-t-dark;
-
   z-index: var(--#{$page}__sidebar--ZIndex);
   display: flex;
   flex-direction: column;
@@ -403,10 +378,9 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   transition: var(--#{$page}__sidebar--Transition);
   transform: translateX(var(--#{$page}__sidebar--TranslateX)) translateZ(var(--#{$page}__sidebar--TranslateZ));
   padding-top: 0;
-  padding-right: var(--pf--global--spacer--lg);
+  margin-right: var(--#{$page}__sidebar--MarginRight);
   padding-bottom: var(--pf--global--spacer--lg);
   padding-left: var(--pf--global--spacer--lg);
-
 
   // Mobile
   // Expanded nav
@@ -434,6 +408,19 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
     border-right: var(--#{$page}__sidebar--m-light--BorderRightWidth) solid var(--#{$page}__sidebar--m-light--BorderRightColor);
   }
+}
+
+.#{$page}__sidebar-header {
+  border-bottom: var(--#{$page}__sidebar-header--BorderBottomWidth) solid var(--#{$page}__sidebar-header--BorderBottomColor);
+  padding-top: var(--#{$page}__sidebar-header--PaddingTop);
+  padding-bottom: var(--#{$page}__sidebar-header--PaddingBottom);
+}
+
+.#{$page}__sidebar-title {
+  font-size: var(--#{$page}__sidebar-title--FontSize);
+  line-height: var(--#{$page}__sidebar-title--LineHeight);
+  font-family: var(--#{$page}__sidebar-title--FontFamily);
+  font-weight: var(--#{$page}__sidebar-title--FontWeight);
 }
 
 .#{$page}__sidebar-body {
@@ -559,15 +546,13 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
 // Main & Drawer
 .#{$page}__main {
-  background-color: var(--pf--global--background--color--primary);
-  padding-top: var(--pf--global--spacer--lg);
-  padding-right: var(--pf--global--spacer--lg);
-  padding-bottom: var(--pf--global--spacer--lg);
-  padding-left: var(--pf--global--spacer--lg);
-  margin-top: 0; 
+  margin-top: 0;
   margin-right: var(--pf--global--spacer--lg);
+}
+
+.#{$page}__main-list {
+  background-color: var(--pf--global--background--color--primary);
   margin-bottom: var(--pf--global--spacer--lg);
-  margin-left: var(--pf--global--spacer--lg);
   border-radius: var(--pf--global--border--radius--large);
 }
 
@@ -586,7 +571,8 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
 .#{$page}__main,
 .#{$page}__main-drawer,
-.#{$page}__main-group {
+.#{$page}__main-group,
+.#{$page}__main-list {
   display: flex;
   flex-direction: column;
 }
