--- a/src/patternfly/components/config.hbs
+++ b/src/patternfly/components/config.hbs
@@ -4,9 +4,8 @@
     - theme
 
 --}}
-{{#temp (object name="steve" age=40 array_example=(array true 2 "3"))}}
 {{!-- set root, modifier, and attribute --}}
-{{> config-init}}
+{{> config-init (object name="steve" age=40 array_example=(array true 2 "3")}}
 {{debug}}
 {{!-- add functions here --}}
 {{> @partial-block}}
