chore(hack): update

--- a/src/patternfly/base/_variables.scss
+++ b/src/patternfly/base/_variables.scss
@@ -296,3 +296,4 @@
 @import "./tokens/palette-dark";
 @import "./tokens/semantic";
 @import "./tokens/semantic-dark";
+@import "./tokens/overrides";
