--- a/src/patternfly/components/ExampleComponent/templates/example-component-array.hbs
+++ b/src/patternfly/components/ExampleComponent/templates/example-component-array.hbs
@@ -1,4 +1,4 @@
-{{!-- {{#each (exampleArray)}}
+{{#each (exampleArray)}}
   {{#> example-component}}
     {{#> example-component-body}}
       {{#> list}}
@@ -6,4 +6,4 @@
       {{/list}}
     {{/example-component-body}}
   {{/example-component}}
-{{/each}} --}}
+{{/each}}
