--- a/src/patternfly/components/config-init.hbs
+++ b/src/patternfly/components/config-init.hbs
@@ -6,3 +6,8 @@
 
 {{!-- call root, set attribute --}}
 {{setVar 'component-attribute' (concat @component-root '--attribute')}}
+
+{{!-- {{#if isRoot}}
+  {{getContent @component-root}}
+{{/if}} --}}
+
