--- a/src/patternfly/components/config.hbs
+++ b/src/patternfly/components/config.hbs
@@ -4,8 +4,11 @@
     - theme
 
 --}}
-{{!-- set root, modifier, and attribute --}}
-{{> config-init (object name="steve" age=40 array_example=(array true 2 "3")}}
-{{debug}}
+{{!-- {{#temp (object name="steve" age=40 array_example=(array true 2 "3"))}} --}}
+
+{{!-- set component root, modifier, and attribute variables --}}
+{{> config-init}}
+
+
 {{!-- add functions here --}}
 {{> @partial-block}}
