feat(Menu): added pf-m-disabled class to block

--- a/src/patternfly/components/Menu/menu.scss
+++ b/src/patternfly/components/Menu/menu.scss
@@ -726,6 +726,7 @@
   }
 
   &:disabled,
+  &.pf-m-disabled,
   &.pf-m-aria-disabled {
     --#{$menu}__item-action--Color: var(--#{$menu}__item-action--disabled--Color);
   }
