--- a/src/patternfly/components/config.hbs
+++ b/src/patternfly/components/config.hbs
@@ -2,7 +2,8 @@
   config options:
     - className
     - theme
-
+    - ignoreDefault - bool
+      - ignores the
 --}}
 {{!-- {{#temp (object name="steve" age=40 array_example=(array true 2 "3"))}} --}}
 
