--- a/src/patternfly/components/ExampleComponent/templates/example-component-object.hbs
+++ b/src/patternfly/components/ExampleComponent/templates/example-component-object.hbs
@@ -1,4 +1,4 @@
-{{#each (exampleObject)}}
+{{!-- {{#each (exampleObject)}}
   {{#> example-component example-component--index=@index example-component--id=(concat 'example-component-' @index)}}
     {{#> example-component-title example-component--id=(concat 'testing-' @index)}}
       {{this.name}} Key: {{@index}}
@@ -14,4 +14,4 @@
     {{/example-component-footer}}
     {{{html}}}
   {{/example-component}}
-{{/each}}
+{{/each}} --}}
