fix(form-control): change divs to spans

--- a/src/patternfly/components/FormControl/form-control-select.hbs
+++ b/src/patternfly/components/FormControl/form-control-select.hbs
@@ -10,7 +10,7 @@
   {{#ifAny form-control--HasIcon form-control--IsError form-control--IsSuccess form-control--IsWarning}}
     {{> form-control-template-status}}
   {{/ifAny}}
-  <div class="{{pfv}}form-control__toggle-icon">
+  <span class="{{pfv}}form-control__toggle-icon">
     <i class="fas fa-caret-down" aria-hidden="true"></i>
-  </div>
+  </span>
 {{/form-control-utilities}}
