--- a/src/patternfly/components/FormControl/form-control.hbs
+++ b/src/patternfly/components/FormControl/form-control.hbs
@@ -1,4 +1,4 @@
-<div class="{{pfv}}form-control
+<span class="{{pfv}}form-control
   {{#if form-control--IsExpanded}} pf-m-expanded{{/if}}
   {{#if form-control--IsDisabled}} pf-m-disabled{{/if}}
   {{#if form-control--IsReadonly}} pf-m-readonly{{/if}}
@@ -35,4 +35,4 @@
       {{/form-control-utilities}}
     {{/ifAny}}
   {{/ifEquals}}
-</div>
+</span>
