fix(toolbar): updated var and standalone display

--- a/src/patternfly/components/Check/check.scss
+++ b/src/patternfly/components/Check/check.scss
@@ -27,7 +27,7 @@
     --#{$check}__input--Height: auto;
     --#{$check}__input--TranslateY: 0;
 
-    display: inline-grid;
+    display: inline-block;
     line-height: 1;
   }
 }
