fix(toolbar): removed height and translate

--- a/src/patternfly/components/Check/check.scss
+++ b/src/patternfly/components/Check/check.scss
@@ -6,12 +6,11 @@
   --#{$check}__label--Color: var(--#{$pf-global}--Color--100);
   --#{$check}__label--FontWeight: var(--#{$pf-global}--FontWeight--normal);
   --#{$check}__label--FontSize: var(--#{$pf-global}--FontSize--md);
-  --#{$check}__label--LineHeight: var(--#{$pf-global}--LineHeight--sm);
-  --#{$check}__input--Height: var(--#{$check}__label--FontSize);
-  --#{$check}__input--TranslateY: calc(((var(--#{$check}__label--FontSize) * var(--#{$check}__label--LineHeight)) - var(--#{$check}__input--Height)) / 2);
+  --#{$check}__label--LineHeight: var(--#{$pf-global}--LineHeight--md);
+  --#{$check}__input--TranslateY: pf-size-prem(4px); // FF needs an offset
   --#{$check}__description--FontSize: var(--#{$pf-global}--FontSize--sm);
   --#{$check}__description--Color: var(--#{$pf-global}--Color--200);
-  --#{$check}__body--TranslateY: var(--#{$pf-global}--spacer--sm);
+  --#{$check}__body--MarginTop: var(--#{$pf-global}--spacer--sm);
 
   // Required checkbox
   --#{$check}__label-required--MarginLeft: var(--#{$pf-global}--spacer--xs);
@@ -21,14 +20,13 @@
   display: grid;
   grid-template-columns: auto 1fr;
   grid-gap: var(--#{$check}--GridGap);
+  align-items: baseline;
 
   &.pf-m-standalone {
     --#{$check}--GridGap: 0;
-    --#{$check}__input--Height: auto;
     --#{$check}__input--TranslateY: 0;
 
-    display: inline-block;
-    line-height: 1;
+    display: inline-grid;
   }
 }
 
@@ -39,11 +37,6 @@
   color: var(--#{$check}__label--Color);
 }
 
-.#{$check}__input {
-  height: var(--#{$check}__input--Height);
-  transform: translateY(var(--#{$check}__input--TranslateY));
-}
-
 .#{$check}__description {
   grid-column: 2;
   font-size: var(--#{$check}__description--FontSize);
@@ -52,7 +45,14 @@
 
 .#{$check}__body {
   grid-column: 2;
-  transform: translateY(var(--#{$check}__body--TranslateY));
+  margin-top: var(--#{$check}__body--MarginTop);
+}
+
+.#{$check}__input {
+  // FF misaligns checkboxes without a set height
+  // stylelint-disable property-no-vendor-prefix
+  -moz-transform: translateY(--#{$check}__input--TranslateY);
+  // stylelint-enable
 }
 
 .#{$check}__label,
