--- a/src/patternfly/components/Check/check.scss
+++ b/src/patternfly/components/Check/check.scss
@@ -7,7 +7,7 @@
   --#{$check}__label--FontWeight: var(--#{$pf-global}--FontWeight--normal);
   --#{$check}__label--FontSize: var(--#{$pf-global}--FontSize--md);
   --#{$check}__label--LineHeight: var(--#{$pf-global}--LineHeight--md);
-  --#{$check}__input--TranslateY: pf-size-prem(4px); // FF needs an offset
+  --#{$check}__input--TranslateY: #{pf-size-prem(5px)}; // FF needs an offset
   --#{$check}__description--FontSize: var(--#{$pf-global}--FontSize--sm);
   --#{$check}__description--Color: var(--#{$pf-global}--Color--200);
   --#{$check}__body--MarginTop: var(--#{$pf-global}--spacer--sm);
@@ -51,7 +51,7 @@
 .#{$check}__input {
   // FF misaligns checkboxes without a set height
   // stylelint-disable property-no-vendor-prefix
-  -moz-transform: translateY(--#{$check}__input--TranslateY);
+  -moz-transform: translateY(var(--#{$check}__input--TranslateY));
   // stylelint-enable
 }
 
