--- a/src/patternfly/components/Check/check.scss
+++ b/src/patternfly/components/Check/check.scss
@@ -27,6 +27,10 @@
     --#{$check}__input--TranslateY: 0;
 
     display: inline-grid;
+
+    > .#{$check}__input {
+      align-self: center;
+    }
   }
 }
 
