--- a/src/patternfly/components/MenuToggle/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/menu-toggle.scss
@@ -368,8 +368,7 @@
       --#{$check}__label--Color: currentcolor;
       --#{$check}__label--disabled--Color: currentcolor;
 
-      align-items: center;
-      align-self: stretch;
+      align-self: center;
     }
 
     // Split button, active
