--- a/src/patternfly/components/Check/check.scss
+++ b/src/patternfly/components/Check/check.scss
@@ -27,6 +27,7 @@
     --#{$check}__input--TranslateY: 0;
 
     display: inline-grid;
+    align-items: normal;
 
     > .#{$check}__input {
       align-self: center;
