--- a/src/patternfly/components/MenuToggle/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/menu-toggle.scss
@@ -165,7 +165,7 @@
 
   position: relative;
   display: inline-flex;
-  align-items: center;
+  align-items: baseline;
   max-width: 100%;
   padding: var(--#{$menu-toggle}--PaddingTop) var(--#{$menu-toggle}--PaddingRight) var(--#{$menu-toggle}--PaddingBottom) var(--#{$menu-toggle}--PaddingLeft);
   font-size: var(--#{$menu-toggle}--FontSize);
@@ -530,6 +530,7 @@
 .#{$menu-toggle}__count {
   display: flex;
   align-items: center;
+  align-self: center;
   margin-left: var(--#{$menu-toggle}__count--MarginLeft);
 }
 
