--- a/src/patternfly/components/Toolbar/toolbar.scss
+++ b/src/patternfly/components/Toolbar/toolbar.scss
@@ -164,6 +164,21 @@ $pf-v5-c-toolbar--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2
     box-shadow: var(--#{$toolbar}--m-sticky--BoxShadow);
   }
 
+  &.pf-m-static {
+    &,
+    .#{$toolbar}__content {
+      position: static;
+    }
+
+    .#{$toolbar}__expandable-content {
+      position: absolute;
+    }
+  }
+}
+
+.#{$toolbar},
+.#{$toolbar}__content-section,
+.#{$toolbar}__group {
   &.pf-m-full-height {
     --#{$toolbar}--PaddingTop: var(--#{$toolbar}--m-full-height--PaddingTop);
     --#{$toolbar}--PaddingBottom: var(--#{$toolbar}--m-full-height--PaddingTop);
@@ -189,17 +204,6 @@ $pf-v5-c-toolbar--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2
 
     :where(.#{$toolbar}__item) {
       --#{$toolbar}__item--AlignItems: var(--#{$toolbar}--m-full-height__item--AlignItems);
-    }
-  }
-
-  &.pf-m-static {
-    &,
-    .#{$toolbar}__content {
-      position: static;
-    }
-
-    .#{$toolbar}__expandable-content {
-      position: absolute;
     }
   }
 }
